// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionService createQuestion allows creating a partly restricted FREE_RANGE question 1`] = `

    QUESTION

    Title: question without tags
    Type: FREE_RANGE

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: undefined
        MC: undefined
        FREE_RANGE: 
          Restrictions: {
            Max: 20
            Min: null
          }
        
      }
      Solution: {
        SC: []
        MC: []
        FREE: undefined
        FREE_RANGE: 10
      }
      
    ]
  
`;

exports[`QuestionService createQuestion allows creating a valid FREE question 1`] = `

    QUESTION

    Title: question without tags
    Type: FREE

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: undefined
        MC: undefined
        FREE_RANGE: undefined
      }
      Solution: {
        SC: []
        MC: []
        FREE: Schweiz
        FREE_RANGE: undefined
      }
      
    ]
  
`;

exports[`QuestionService createQuestion allows creating a valid FREE_RANGE question 1`] = `

    QUESTION

    Title: question without tags
    Type: FREE_RANGE

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: undefined
        MC: undefined
        FREE_RANGE: 
          Restrictions: {
            Max: 100
            Min: 10
          }
        
      }
      Solution: {
        SC: []
        MC: []
        FREE: undefined
        FREE_RANGE: 56
      }
      
    ]
  
`;

exports[`QuestionService createQuestion allows creating a valid MC question 1`] = `

    QUESTION

    Title: question without tags
    Type: MC

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: undefined
        MC: {
          Choices: [{
              Correct: false
              Name: option1
            },{
              Correct: true
              Name: option2
            },{
              Correct: false
              Name: option2
            }
          ]
          Randomized: true
        }
        FREE_RANGE: undefined
      }
      Solution: {
        SC: []
        MC: []
        FREE: undefined
        FREE_RANGE: undefined
      }
      
    ]
  
`;

exports[`QuestionService createQuestion allows creating a valid SC question 1`] = `

    QUESTION

    Title: question without tags
    Type: SC

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: {
          Choices: [{
              Correct: false
              Name: option1
            },{
              Correct: true
              Name: option2
            },{
              Correct: false
              Name: option2
            }
          ]
          Randomized: true
        }
        MC: undefined
        FREE_RANGE: undefined
      }
      Solution: {
        SC: [false,true,false]
        MC: [false,true,false]
        FREE: undefined
        FREE_RANGE: undefined
      }
      
    ]
  
`;

exports[`QuestionService createQuestion allows creating an unrestricted FREE_RANGE question 1`] = `

    QUESTION

    Title: question without tags
    Type: FREE_RANGE

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: undefined
        MC: undefined
        FREE_RANGE: 
          Restrictions: {
            Max: null
            Min: null
          }
        
      }
      Solution: {
        SC: []
        MC: []
        FREE: undefined
        FREE_RANGE: 56
      }
      
    ]
  
`;

exports[`QuestionService modifyQuestion allows creating a new question version 1`] = `

    QUESTION

    Title: modified title
    Type: SC

    Instances: []
    Tags: [ABCD,XYZ]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: {
          Choices: [{
              Correct: false
              Name: option1
            },{
              Correct: true
              Name: option2
            },{
              Correct: false
              Name: option2
            }
          ]
          Randomized: true
        }
        MC: undefined
        FREE_RANGE: undefined
      }
      Solution: {
        SC: [false,true,false]
        MC: [false,true,false]
        FREE: undefined
        FREE_RANGE: undefined
      }
      
    ,
      Description: This is the new description for version 2
      Instances: []
      Options: {
        SC: {
          Choices: [{
              Correct: true
              Name: option3
            },{
              Correct: false
              Name: option4
            }
          ]
          Randomized: true
        }
        MC: undefined
        FREE_RANGE: undefined
      }
      Solution: undefined
    ]
  
`;

exports[`QuestionService modifyQuestion allows modifying the question tags 1`] = `

    QUESTION

    Title: modified title
    Type: SC

    Instances: []
    Tags: [,]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: {
          Choices: [{
              Correct: false
              Name: option1
            },{
              Correct: true
              Name: option2
            },{
              Correct: false
              Name: option2
            }
          ]
          Randomized: true
        }
        MC: undefined
        FREE_RANGE: undefined
      }
      Solution: {
        SC: [false,true,false]
        MC: [false,true,false]
        FREE: undefined
        FREE_RANGE: undefined
      }
      
    ]
  
`;

exports[`QuestionService modifyQuestion allows modifying the question title 1`] = `

    QUESTION

    Title: modified title
    Type: SC

    Instances: []
    Tags: [ABCD,test]
    Versions: [
      Description: blabla
      Instances: []
      Options: {
        SC: {
          Choices: [{
              Correct: false
              Name: option1
            },{
              Correct: true
              Name: option2
            },{
              Correct: false
              Name: option2
            }
          ]
          Randomized: true
        }
        MC: undefined
        FREE_RANGE: undefined
      }
      Solution: {
        SC: [false,true,false]
        MC: [false,true,false]
        FREE: undefined
        FREE_RANGE: undefined
      }
      
    ]
  
`;
